--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link rel="icon" href="FreeGPT.jpg">
     <style>
         body {
-            background-color: #f0f0f0;
+            background-color: #f9f9f9;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             min-height: 100vh;
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
         }
         img {
             max-width: 90%;
             height: auto;
             border-radius: 12px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
         }
         h1 {
             color: #333;
@@ -32,7 +32,7 @@
 <body>
 
     <h1>Welcome to FreeGPT!</h1>
-    <img src="FreeGPT.jpg" alt="FreeGPT Logo">
+    <img src="FreeGPT.jpg" alt="FreeGPT Image">
 
 </body>
 </html>
