--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
     <h1>Welcome to FreeGPT!</h1>
-    <img src="FreeGPT.jpg" alt="FreeGPT Image"> <!-- The image you uploaded -->
+    <img src="FreeGPT.png" alt="FreeGPT Image"> <!-- The image you uploaded -->
 
 </body>
 </html>
