--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreeGPT</title>
-    <link rel="icon" href="FreeGPT.png"> <!-- Favicon -->
+    <link rel="icon" href="FreeGPT.png"> 
     <style>
         body {
             background-color: #f9f9f9;
@@ -32,7 +32,7 @@
 <body>
 
     <h1>Welcome to FreeGPT!</h1>
-    <img src="FreeGPT.png" alt="FreeGPT Image"> <!-- The image you uploaded -->
+    <img src="FreeGPT.png" alt="FreeGPT Image"> 
 
 </body>
 </html>
